// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tabs Compact 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kUTqHn StyledTabs-a4fwxl-2 bpLJQL sc-ecQkzk bZPUPk sc-jlQhrW eXTeef"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bNouWo StyledTabs__StyledTabsHeader-a4fwxl-0 bWPZNA"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWDndV StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gIGGCa"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 cZmQFL"
        role="tabpanel"
      >
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz cZcmIk"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kUTqHn StyledTabs-a4fwxl-2 bpLJQL sc-ecQkzk byEDDp sc-jlQhrW eXTeef"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bNouWo StyledTabs__StyledTabsHeader-a4fwxl-0 bWPZNA"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWDndV StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gIGGCa"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              Tab 3
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 cZmQFL"
        role="tabpanel"
      >
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz cZcmIk"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs With Long Titles 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kUTqHn StyledTabs-a4fwxl-2 bpLJQL sc-ecQkzk byEDDp sc-jlQhrW eXTeef"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bNouWo StyledTabs__StyledTabsHeader-a4fwxl-0 bWPZNA"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWDndV StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gIGGCa"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 ewJzBO"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kUZDLN StyledTab-sc-1nnwnsb-0 jvyVKX"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bcMaar"
            >
              And this is a third very long tab name
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="This is a very long tab name Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 cZmQFL"
        role="tabpanel"
      >
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz cZcmIk"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;
